# gpu-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  a.sh  benchmark.md  file.txt  gpu_best_version.txt  gpu_full.txt  gpu_fuse_operators.txt  gpu_shared.txt  gpu_single_thread.txt  shell.nix
src/: filter_impl.cpp  filter_impl.cu  filter_impl.h  gstcudafilter.c  gstcudafilter.h  logo.c  logo.h  main.cpp
subject/: notebook.ipynb
